--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,26 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+Button {
+  /* display: flex; */
+  width: 5rem;
+  height: 5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-row {
+  display: block;
+  width: 15rem;
+  height: 5rem;
+}
+
+.unclicked {
+  background-color: grey;
+}
+
+.p1-clicked {
+  background-color: greenyellow;
+}
+
+.p2-clicked {
+  background-color: indianred;
 }
